# programamming-languages-benchmark

./: README.md  experimento.sh  install.sh  make-input.sh  plot.py  post_processing.py  run.sh  tomada.py
ada/binarytrees/: apache_runtime-pools.adb  apache_runtime-pools.ads  apache_runtime-pools.ali  apache_runtime.ads  apache_runtime.ali  binarytrees  binarytrees.adb  binarytrees.ali  trees.adb  trees.ads  trees.ali
ada/fannkuchredux/: fannkuchredux  fannkuchredux.adb  fannkuchredux.ali  fannkuchredux.gnat
ada/fasta/: command.txt  fasta  fasta.adb  fasta.ali  fasta.gnat  lcg_random.adb  lcg_random.ads  lcg_random.ali  line_io.adb  line_io.ads  line_io.ali  sequence-creation.adb  sequence-creation.ads  sequence-creation.ali  sequence-data.ads  sequence-data.ali  sequence.ads  sequence.ali
ada/knucleotide/: data_input.adb  data_input.ads  data_input.ali  knucleotide  knucleotide.adb  knucleotide.ali  line_io.adb  line_io.ads  line_io.ali  string_fragments.adb  string_fragments.ads  string_fragments.ali
ada/mandelbrot/: mandelbrot  mandelbrot.adb  mandelbrot.ali
ada/nbody/: nbody  nbody.adb  nbody.ali  nbody_pck.adb  nbody_pck.ads  nbody_pck.ali
ada/pidigits/: command.txt  pidigits  pidigits.adb  pidigits.ali  pidigits.gnat
ada/regexredux/: block_input.adb  block_input.ads  block_input.ali  command.txt  dna-matching.adb  dna-matching.ads  dna-matching.ali  dna-replacing.adb  dna-replacing.ads  dna-replacing.ali  dna.ads  dna.ali  preprocessing.adb  (+7 more)
c++/: run-all.sh
javascript/: run-all.sh
rust/knucleotide/: Cargo.toml
rust/spectralnorm/: Cargo.toml
(+569 files in other folders)
