[package]
name = "spectralnorm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-array = "0.13.3"
numeric-array = "0.4.2"
rayon = "1.7.0"

[[bin]]
name = "spectralnorm"
path = "spectralnorm.rs"
